manifests/networkpolicies/allow-processor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-processor-http-out
  namespace: assettrack
spec:
  podSelector:
    matchLabels:
      app: processor
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 5672
    - protocol: TCP
      port: 15672
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-processor-http-in
  namespace: assettrack
spec:
  podSelector:
    matchLabels:
      app: processor
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 8000
