manifests/networkpolicies/app-comm.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-communication
  namespace: assettrack
spec:
  podSelector:
    matchLabels:
      app: api-service
  policyTypes:
  - Ingress
  ingress:
  # Allow ingress from webapp-ui
  - from:
    - podSelector:
        matchLabels:
          app: webapp-ui
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: processor-communication
  namespace: assettrack
spec:
  podSelector:
    matchLabels:
      app: processor-service
  policyTypes:
  - Ingress
  ingress:
  # Allow ingress from api-service
  - from:
    - podSelector:
        matchLabels:
          app: api-service
    ports:
    - protocol: TCP
      port: 8000
  # Allow ingress from collector-service
  - from:
    - podSelector:
        matchLabels:
          app: collector-service
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collector-communication
  namespace: assettrack
spec:
  podSelector:
    matchLabels:
      app: collector-service
  policyTypes:
  - Ingress
  ingress:
  # Allow ingress from api-service
  - from:
    - podSelector:
        matchLabels:
          app: api-service
    ports:
    - protocol: TCP
      port: 8000
